--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -12,21 +12,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
-        <img
+          <img
           src="./assets/Avatar.png"
           alt="Foto de Jeniffer Magnani sorrindo, usando a camiseta da Gett cor preta no seu primeiro dia na Empresa Gett."
         />
         <p>@jenifferjmagnani</p>
       </div>
 
-      <div id="switch" onclick="toggleMode{}">
+      <div id="switch" onclick="toggleMode()">
         <button></button>
-        <span> </span>
+        <span></span>
       </div>
       <ul>
         <li>
