--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -30,7 +30,9 @@
       </div>
       <ul>
         <li>
-          <a href="#">View my Portfolio</a>
+          <a href="https://github.com/jenifferjmagnani" target="_blank"
+            >View my Portfolio</a
+          >
         </li>
 
         <li>
